package br.com.portadosdesesperados;

public class Conexao {
}
