package br.com.portadosdesesperados;

public class Embaralhador {
}
