package br.com.portadosdesesperados;

public class Premio {
    private String tipoPremio;

    public Premio(String tipoPremio) {
        this.tipoPremio = tipoPremio;
    }

    public String getTipoPremio() {
        return tipoPremio;
    }

    public void setTipoPremio(String tipoPremio) {
        this.tipoPremio = tipoPremio;
    }
}
